syntax-analyzer/tests/test_errors2.c
int main() {
    int list my_list = NIL;        // error
    int elem;
    elem %% my_list;   // error
    return my_list;
}